# .dotfiles

./: .gitattributes  CLAUDE.md  Makefile  Taskfile.yml  pyproject.toml
aerospace/: .aerospace.toml
ashell/.config/ashell/: config.toml
autotiling-rs/.config/systemd/user/: autotiling-rs.service
avizo/.config/avizo/: config.ini
avizo/.config/systemd/user/: avizo.service
brave-nvidia/.config/: brave-flags.conf
brave/.config/: brave-flags.conf
brew/.config/brewfile/: brewfile  install.sh
chrome-nvidia/.config/google-chrome/NativeMessagingHosts/: io.commonfate.granted.json
chrome/.config/: chrome-flags.conf
claude/.claude/: CLAUDE.md  settings.json
claude/.claude-kilic/: settings.json
claude/.claude-kilic/themes/: onedarker.json
claude/.claude-laravel/: settings.json
claude/.claude/skills/assistant/: SKILL.md
claude/.claude/skills/evaluate/: SKILL.md
claude/.claude/skills/github-pr/: SKILL.md
claude/.claude/skills/linear/: SKILL.md
claude/.claude/skills/skill-creator/: SKILL.md
claude/.claude/skills/todo/: SKILL.md
claude/.claude/themes/: onedarker.json
claude/agents/skills/assistant/: SKILL.md
claude/agents/skills/linear-work/: SKILL.md
claude/agents/skills/note/: SKILL.md
clipse/.config/clipse/: config.json
clipse/.config/systemd/user/: clipse.service
codex/.codex/: default.config.toml
codex/.config/systemd/user/: codex-remote-control.service
electron-nvidia/.config/: electron-flags.conf
electron/.config/: electron-flags.conf
enchant/.config/enchant/: enchant.ordering
etc/.config/etc/: environment
foot/.config/foot/: foot.ini
gitconfig/: .gitattributes  .gitconfig
gtk/.config/gtk-3.0/: settings.ini
gtk/.config/gtk-4.0/: settings.ini
host-mau5-rootfs/etc/coolercontrol/: config-ui.json  config.toml
hyprland/: .stow-local-ignore
hyprland/.config/hypr/: .gitignore  .luarc.json  README.md  application-style.conf  definitions.conf  definitions.lua  hypridle.conf  hyprland-new.lua  hyprland.conf  hyprland.lua  hyprland.toml  hyprlock.conf  hyprpaper.conf  hyprqt6engine.conf  plugins.conf  plugins.lua  selene.toml
hyprland/.config/hyprland-autoname-workspaces/: config.toml
hyprpilot/.config/hyprpilot/: config.toml  config.yaml
hyprwhspr/.config/hyprwhspr/: config.json
janky-borders/.config/borders/: bordersrc
kanshi/.config/kanshi/: config
khal/.config/khal/: config
kitty/.config/kitty/: kitten-ssh-zsh.conf  kitty.conf  macos.conf  ssh.conf
mako/.config/mako/: config
mangohud/.config/MangoHud/: MangoHud.conf
mimetypes/.config/: mimeapps.list
neomutt/.config/mutt/: mailcap
obsbot/.config/obsbot-control/: settings.conf
opencode/.config/opencode/: opencode.json  opencode.jsonc
pacman/.config/pacman/: amd.txt  audio.txt  extras.txt  full.txt  gaming-emulation.txt  gaming.txt  hyprland.txt  install.sh  intel.txt  list.sh  minimum.txt  music.txt  nvidia.txt  pacman.conf  pkglist.emanet.txt  pkglist.txt  pkglist_aur.emanet.txt  pkglist_aur.txt  pkgs.txt  qemu.txt  sway.txt  uninstall.sh
pacman/.config/yay/: init.lua
rofi/.config/rofi/: config.rasi
rootfs/: .stow-local-ignore
rootfs/etc/: environment  pacman.conf  tlp.conf
rootfs/etc/clamav/: clamd.conf  virus-event.sh
rootfs/etc/greetd/: config.toml
rootfs/etc/keyd/: default.conf
rootfs/etc/makepkg.conf.d/: overrides.conf
rootfs/etc/modprobe.d/: nvidia-power.conf  obs-virtual-camera.conf
rootfs/etc/sysctl.d/: 90-files.conf  99-ip.conf
rootfs/etc/udev/scripts/: xpub.sh  (+4 more)
scripts/: .stow-local-ignore
shikane/.config/shikane/: config.toml
sketchybar/.config/sketchybar/: sketchybarrc
ssh-config/.ssh/: config
ssh-config/.ssh/config.d/: cluster  machine  sorwe
steamtinkerlaunch/.config/steamtinkerlaunch/: default_template.conf  global.conf
swappy/.config/swappy/: config
sway/: .stow-local-ignore
sway/.config/gtk-3.0/: settings.ini
sway/.config/gtk-4.0/: settings.ini
sway/.config/sway/: config  definitions  help.man
swayimg/.config/swayimg/: config  init.lua
swaylock/.config/swaylock/: config
swaync/.config/swaync/: config.json  style.css
swayr/.config/swayr/: config.toml
sworkstyle/.config/sworkstyle/: config.toml
uwsm/.config/uwsm/: env  env-amd  env-hybrid  env-hyprland  env-integrated  env-nvidia  env-sway
vpn/: softether-internal.sh
vpn/scripts/: softether-internal.sh
waybar/.config/waybar/: config  config.jsonc  hyprland.jsonc  style.css  sway.jsonc  theme.css
wayland/: .stow-local-ignore
wayland-pipewire-idle-inhibit/.config/wayland-pipewire-idle-inhibit/: config.toml
wayland/.config/wayland/scripts/: ask-mcp.py  ask.css  ask.md  ask.py  copywriter.md  copywriter.py  gtk-config.sh  lib.py  pilot.css  pilot.md  pilot.py  pyproject.toml  quick-note.sh  recorder.py  speech.md  speech.py
wayland/.config/wayland/scripts/lib/: __init__.py  acp_adapter.py  cli.py  converse.py  default_servers.py  enrich.py  input.py  layer_shell.py  markup.py  mcp.py  mcp_server.py  mcp_servers.py  notify.py  output.py  overlay.css  overlay.py  pango_highlight.py  permissions.py  prompts.py  skills.py  tasks.py  tool_format.py  tools.py  waybar.py
waylogout/.config/waylogout/: config
waystt/.config/waystt/: .env  install.sh
wiremix/.config/wiremix/: wiremix.toml
wlogout/.config/wlogout/: layout  style.css
wofi/.config/wofi/: style.css
xauthority/: .Xauthority
xdg-desktop-portal-termfilechooser/.config/xdg-desktop-portal-termfilechooser/: common.sh  config  install.sh  ranger.sh  yazi.sh
xdg-desktop-portal/.config/xdg-desktop-portal/: sway-portals.conf
xournalpp/.config/xournalpp/: install.sh  palette.gpl  settings.xml  settings.xml.bak  toolbar.ini
xsettingsd/.config/xsettingsd/: xsettingsd.conf
yabai/.config/sketchybar/: colors.sh  sketchybarrc
yabai/.config/skhd/: skhdrc
yabai/.config/yabai/: yabairc
(+240 files in other folders)
