# Dependency manifest for the wayland/scripts package.
#
# Runtime model: each executable script (copywriter.py, recorder.py,
# speech.py) shebangs to `uv run` via a small `sh -c` trampoline so
# invocation works from any CWD (compositor keybinds don't cd into the
# scripts dir before spawning):
#
#     #!/usr/bin/env -S sh -c 'exec uv run --project "$(dirname "$0")" "$0" "$@"'
#
# `$0` is the script path the kernel hands us at shebang-time, so
# `$(dirname "$0")` resolves to whichever directory the script is
# actually sitting in (stow destination when invoked through the
# symlink, dotfiles repo when running directly). `uv run --project`
# walks UP the tree from there to locate this pyproject.toml. No
# hardcoded `$HOME` — the path travels with the script.
#
# `uv run` resolves the dependency set below, ensures `.venv/` matches,
# and executes the requested script inside that env. No `.venv/`
# commits go into git — the Taskfile bootstrap provisions it with
# `uv sync`.
#
# PEP 723 inline metadata was ruled out: `uv run --script` deliberately
# ignores the project's dependency set (see
# https://docs.astral.sh/uv/guides/scripts/#using-a-shebang-to-create-an-executable-file),
# which would force us to copy the dep list into every entry script.

[project]
name = "wayland-scripts"
version = "0.1.0"
description = "Speech capture, recorder and copywriter glue for the Wayland dotfiles."
requires-python = ">=3.14"
dependencies = [
  # CLI parsing + styled logging (stderr only).
  "click>=8.1",
  "rich>=13.7",
  # Singleton detection + waybar process chatter.
  "psutil>=7.0",
  # obs-websocket bindings for recorder.py.
  "obsws-python>=1.8",
]

[tool.ty.environment]
extra-paths = ["."]

[tool.pyright]
extraPaths = ["."]
